Bug 1863 - Wrong battery charging/Discharging bits information.
Summary: Wrong battery charging/Discharging bits information.
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Battery (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Luming Yu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-01-13 22:53 UTC by Luming Yu
Modified: 2004-05-11 23:22 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.4 2.6
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
a patch (1.02 KB, patch)
2004-01-13 22:54 UTC, Luming Yu
Details | Diff

Description Luming Yu 2004-01-13 22:53:44 UTC
Some laptop display "unkown" as current battery charging/Discharging state. That
is confusing message.(According to ACPI spec 2.0b).
Comment 1 Luming Yu 2004-01-13 22:54:45 UTC
Created attachment 1852 [details]
a patch 

a patch to correct it.
Comment 2 Len Brown 2004-04-14 19:00:17 UTC
i'll apply this patch with the state "charged" for the uncovered case.
Comment 3 Len Brown 2004-05-11 23:22:25 UTC
closing -- shipped in 2.6.6 and on top of 2.4.27-pre2 

Note You need to log in before you can comment on or make changes to this bug.