[ACPI] battery "charged" instead of "unknown" (Luming Yu) http://bugzilla.kernel.org/show_bug.cgi?id=1863